@@ -2,31 +2,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <artifactId>bootstrap-parent</artifactId>
+    <groupId>com.japhy.bootstrap</groupId>
+    <version>0.0.2-RELEASE</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-source</artifactId>
-  <groupId>com.japhy.bootstrap</groupId>
-  <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <spring.version>5.0.0.RELEASE</spring.version>
-    <argLine>-Xmx512m -XX:MaxPermSize=256m ${argLine}</argLine>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>5.0.0.RELEASE</version>
+      <artifactId>spring-core</artifactId>
+      <version>5.0.13.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>5.0.13.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.0.13.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>5.0.13.RELEASE</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.6.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
 
 </project>
